--- a/source/common/less/theme-berlin/light.less
+++ b/source/common/less/theme-berlin/light.less
@@ -18,6 +18,11 @@ body {
       font-family: 'Inconsolata', Consolas, Menlo, monospace;
     }
 
+    // Add a background color to the vim command bar
+    .CodeMirror-dialog.CodeMirror-dialog-bottom, .vim-error-message {
+      background-color: rgb(225, 225, 225);
+    }
+
     &.cm-stex-mode,
     &.cm-css-mode {
       font-family: 'Inconsolata', Consolas, Menlo, monospace;
